Updated CSS and fixed some Code to be more readable

--- a/front-end/music-discovery-application/src/index.css
+++ b/front-end/music-discovery-application/src/index.css
@@ -3,6 +3,9 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
+    background-image: url("/home/rdelagarza12/LinuxCoding/assessments/music-discovery-app/front-end/music-discovery-application/src/assets/login-background.jpeg");
+    background-size: cover;
+    background-position-y: -10vh;
 }
 
 .Home {
@@ -15,11 +18,12 @@
 .Header {
     display: flex;
     justify-content: space-between;
-    background-color: steelblue;
-    border: black solid 1px;
-    min-height: 5vmax;
+    background-color: rgb(20,20, 20);
+    border:  rgb(150,255,230) solid 1px;
+    min-height: 5vh;
     height: 10vh
 }
+
 
 .homeButton {
     display: flex;
@@ -34,6 +38,7 @@
     font-size: 2.5vmax;
     margin-top: auto;
     margin-bottom: auto;
+    color: rgb(150,255,230)
 }
 
 .HeaderButtons {
@@ -45,9 +50,23 @@
 }
 
 .btn-primary {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
     margin-right: 2vw;
+    color: rgb(220,220,220);
+    font-weight: bold;
+    background-color: rgb(150,150,150, .35);
+    border: hidden;
+    min-height: 5vh;
+    
 
+}
 
+.btn-primary:hover {
+    background-color: rgb(150,255,230);
+    color: black
 }
 
 .button {
@@ -76,6 +95,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url("/home/rdelagarza12/LinuxCoding/assessments/music-discovery-app/front-end/music-discovery-application/src/assets/lucid-streaming-homepage.jpg");
+    background-size: cover;
+
 }
 
 #generateButton {
@@ -89,6 +111,7 @@
     align-items: center;
     height: 60vh;
 
+
 }
 
 .profile {
@@ -99,7 +122,7 @@
 .library {
     width: 20vw;
     height: 80vh;
-    background-color: rgb(50,50,50);
+
     color: white
 }
 
@@ -107,7 +130,6 @@
     text-align: center;
     width: 80vw;
     height: 80vh;
-    background-color: rgb(30,30,30);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -165,7 +187,6 @@
 .playlist-buttons button {
     display: flex;
     justify-content: center;
-    width: 15vw;
     height: 5vh;
     border-radius: 20px;
 }
@@ -207,7 +228,7 @@
 }
 
 btn btn-secondary dropdown-toggle {
-    background-color: blue;
+    background-color:  rgb(150,255,230);
 }
 
 .playlist-form {
@@ -220,8 +241,8 @@ btn btn-secondary dropdown-toggle {
 }
 
 .all-genres {
-    background-color: white;
-    border: solid steelblue 2px;
+
+
     border-radius: 20px;
     display: flex;
     flex-wrap: wrap;
@@ -238,42 +259,40 @@ btn btn-secondary dropdown-toggle {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: navy solid 1px;
+    border: rgb(100,100,100);
     border-radius: 20px;
     width: 10vw;
     height: 10vh;
     margin: auto;
-    background-color: steelblue;
+    background-color: rgb(120,120,120, 0.35)
 }
 
 .selected-genre {
-    background-color: #007bff; /* Change this to the desired color */
-    color: white; /* Change text color if needed */
+    background-color: rgb(100,255,230, .7);
+    color: black;
   }
 
 .artist {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: navy solid 1px;
+    border: rgb(100,100,100);
     border-radius: 20px;
     width: 15vw;
     height: 10vh;
     margin: auto;
-    background-color: steelblue;
+    background-color: rgb(120,120,120, 0.35)
 }
 
 
 .selected-artist {
-    background-color: #007bff;
-    color: white
+    background-color: rgb(100,255,230, .7);
+    color: black;
 }
 
 
 
 .all-artists {
-    background-color: white;
-    border: solid steelblue 2px;
     border-radius: 20px;
     display: flex;
     flex-wrap: wrap;
@@ -287,8 +306,6 @@ btn btn-secondary dropdown-toggle {
 }
 
 .all-songs {
-    background-color: white;
-    border: solid steelblue 2px;
     border-radius: 20px;
     display: flex;
     flex-wrap: wrap;
@@ -306,12 +323,11 @@ btn btn-secondary dropdown-toggle {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: navy solid 1px;
     border-radius: 20px;
     width: 15vw;
     height: 40vh;
     margin: auto;
-    background-color: steelblue;
+    background-color:rgb(100,100,100, .5)
 }
 
 .song-form {
@@ -341,7 +357,6 @@ btn btn-secondary dropdown-toggle {
 .single-playlist-page {
     width: 80vw;
     height: 80vh;
-    background-color: rgb(30,30,30);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -350,7 +365,6 @@ btn btn-secondary dropdown-toggle {
 }
 
 .playlist-song-list {
-    border: white solid 2px;
     padding-top: 5vh;
     padding-bottom: 5vh;
     overflow-y: scroll;
@@ -361,7 +375,7 @@ btn btn-secondary dropdown-toggle {
 .music-player {
     width: 80vw;
     height: 80vh;
-    background-color: rgb(30,30,30);
+    background-color: rgb(30,30,30, .5);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -391,11 +405,19 @@ btn btn-secondary dropdown-toggle {
     padding-right: 1vw;
     padding-top: 3vh;
     padding-bottom: 3vh;
-    border: steelblue solid 2px;
+
 }
 .random-playlist-image {
     height: 30vh;
     width: 15vw;
     border: solid black 1px;
     border-radius: 20px;
+}
+
+.generatePlaylist {
+    color: white;
+}
+
+.nav-buttons {
+    display: flex;
 }
